--- a/messenger/View/Base.lproj/Main.storyboard
+++ b/messenger/View/Base.lproj/Main.storyboard
@@ -60,7 +60,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v4v-Qo-cGy">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
                                         <subviews>
-                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="bVs-cF-emQ">
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="bVs-cF-emQ">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="674"/>
                                                 <color key="backgroundColor" systemColor="systemGray6Color"/>
                                                 <connections>
@@ -71,7 +71,7 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QWS-qm-AB6">
                                                 <rect key="frame" x="10" y="684" width="394" height="80"/>
                                                 <subviews>
-                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" text=" Ваывавы выавыаы ывавыа ывавыыа ывавыавыаваыва выававыаыв вававыавыаыаы ываываыа  ывааывавыав ваываыввыаывава   wdwd " translatesAutoresizingMaskIntoConstraints="NO" id="NCc-z8-7ZB">
+                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="NCc-z8-7ZB">
                                                         <rect key="frame" x="0.0" y="0.0" width="347.5" height="80"/>
                                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
@@ -101,7 +101,7 @@
                                                 </constraints>
                                             </stackView>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemGray4Color"/>
+                                        <color key="backgroundColor" systemColor="systemGray6Color"/>
                                         <constraints>
                                             <constraint firstItem="QWS-qm-AB6" firstAttribute="top" secondItem="bVs-cF-emQ" secondAttribute="bottom" constant="10" id="BUP-f8-S0b"/>
                                             <constraint firstItem="bVs-cF-emQ" firstAttribute="top" secondItem="v4v-Qo-cGy" secondAttribute="top" id="DhH-Ff-fsW"/>
@@ -141,6 +141,7 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="constraintTopTable" destination="DhH-Ff-fsW" id="GN5-bO-eA1"/>
                         <outlet property="dataTextField" destination="NCc-z8-7ZB" id="a2T-wW-pPk"/>
                         <outlet property="scrollView" destination="cT4-J6-8dy" id="22M-wZ-KiY"/>
                         <outlet property="tableView" destination="bVs-cF-emQ" id="4A0-cv-BiG"/>
@@ -205,9 +206,6 @@
         <image name="square.and.pencil" catalog="system" width="128" height="115"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGray4Color">
-            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
