--- a/messenger/View/MessageToUserCell.xib
+++ b/messenger/View/MessageToUserCell.xib
@@ -10,26 +10,27 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="83" id="KGk-i7-Jjw" customClass="MessageToUserCell" customModule="messenger" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="336" height="83"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="KGk-i7-Jjw" customClass="MessageToUserCell" customModule="messenger" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="370" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="336" height="83"/>
+                <rect key="frame" x="0.0" y="0.0" width="370" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6h9-We-CoU">
-                        <rect key="frame" x="10" y="10" width="266" height="63"/>
+                        <rect key="frame" x="10" y="10" width="300" height="60"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="входящее сообщение" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XkM-Ke-rMm">
-                                <rect key="frame" x="8" y="8" width="219" height="47"/>
+                                <rect key="frame" x="8" y="8" width="222" height="44"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="22:20" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wnL-jf-wg0">
-                                <rect key="frame" x="227" y="41" width="31" height="14"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2022-03-07 21:26:41" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wnL-jf-wg0">
+                                <rect key="frame" x="230" y="30" width="70" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="31" id="Yct-XG-9Be"/>
+                                    <constraint firstAttribute="width" constant="70" id="1Om-fo-eP0"/>
+                                    <constraint firstAttribute="height" constant="30" id="I13-qM-DF6"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <color key="textColor" systemColor="systemGrayColor"/>
@@ -38,11 +39,11 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="wnL-jf-wg0" firstAttribute="leading" secondItem="XkM-Ke-rMm" secondAttribute="trailing" id="Bj0-5E-lxL"/>
+                            <constraint firstItem="wnL-jf-wg0" firstAttribute="leading" secondItem="XkM-Ke-rMm" secondAttribute="trailing" id="A88-v2-r6n"/>
                             <constraint firstItem="XkM-Ke-rMm" firstAttribute="top" secondItem="6h9-We-CoU" secondAttribute="topMargin" id="LM9-rC-mcr"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="wnL-jf-wg0" secondAttribute="bottom" id="Lcl-tx-O5Y"/>
+                            <constraint firstAttribute="trailing" secondItem="wnL-jf-wg0" secondAttribute="trailing" id="e8T-Vp-LWW"/>
                             <constraint firstItem="XkM-Ke-rMm" firstAttribute="leading" secondItem="6h9-We-CoU" secondAttribute="leadingMargin" id="fBN-Mf-G9n"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="wnL-jf-wg0" secondAttribute="trailing" id="gfM-Z7-Bwm"/>
+                            <constraint firstAttribute="bottom" secondItem="wnL-jf-wg0" secondAttribute="bottom" id="iaB-UW-lQN"/>
                             <constraint firstAttribute="bottomMargin" secondItem="XkM-Ke-rMm" secondAttribute="bottom" id="yJe-oj-WMl"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
@@ -65,7 +66,7 @@
                 <outlet property="incommingText" destination="XkM-Ke-rMm" id="beZ-cU-bVY"/>
                 <outlet property="incommingTime" destination="wnL-jf-wg0" id="uoV-ZU-Sp0"/>
             </connections>
-            <point key="canvasLocation" x="185.50724637681162" y="124.21875"/>
+            <point key="canvasLocation" x="210.1449275362319" y="123.21428571428571"/>
         </tableViewCell>
     </objects>
     <resources>
