--- a/messenger/View/Base.lproj/Main.storyboard
+++ b/messenger/View/Base.lproj/Main.storyboard
@@ -55,13 +55,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cT4-J6-8dy">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v4v-Qo-cGy">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                                         <subviews>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="bVs-cF-emQ">
-                                                <rect key="frame" x="0.0" y="0.0" width="414" height="674"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="708"/>
                                                 <color key="backgroundColor" systemColor="systemGray6Color"/>
                                                 <connections>
                                                     <outlet property="dataSource" destination="Zrl-6j-3hJ" id="ZiF-tr-B5Z"/>
@@ -69,7 +69,7 @@
                                                 </connections>
                                             </tableView>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QWS-qm-AB6">
-                                                <rect key="frame" x="10" y="684" width="394" height="80"/>
+                                                <rect key="frame" x="10" y="718" width="394" height="80"/>
                                                 <subviews>
                                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="NCc-z8-7ZB">
                                                         <rect key="frame" x="0.0" y="0.0" width="347.5" height="80"/>
@@ -101,7 +101,6 @@
                                                 </constraints>
                                             </stackView>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemGray6Color"/>
                                         <constraints>
                                             <constraint firstItem="QWS-qm-AB6" firstAttribute="top" secondItem="bVs-cF-emQ" secondAttribute="bottom" constant="10" id="BUP-f8-S0b"/>
                                             <constraint firstItem="bVs-cF-emQ" firstAttribute="top" secondItem="v4v-Qo-cGy" secondAttribute="top" id="DhH-Ff-fsW"/>
@@ -114,22 +113,22 @@
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="v4v-Qo-cGy" secondAttribute="bottom" id="6q3-Kp-6Bo"/>
-                                    <constraint firstItem="v4v-Qo-cGy" firstAttribute="leading" secondItem="cT4-J6-8dy" secondAttribute="leading" id="KZS-iF-l3U"/>
-                                    <constraint firstAttribute="trailing" secondItem="v4v-Qo-cGy" secondAttribute="trailing" id="OCi-xW-IPo"/>
-                                    <constraint firstItem="v4v-Qo-cGy" firstAttribute="centerX" secondItem="cT4-J6-8dy" secondAttribute="centerX" id="SkA-2d-MbJ"/>
-                                    <constraint firstItem="v4v-Qo-cGy" firstAttribute="centerY" secondItem="cT4-J6-8dy" secondAttribute="centerY" id="ZQU-oZ-4jT"/>
-                                    <constraint firstItem="v4v-Qo-cGy" firstAttribute="top" secondItem="cT4-J6-8dy" secondAttribute="top" id="kF8-o9-YFf"/>
+                                    <constraint firstAttribute="trailing" secondItem="v4v-Qo-cGy" secondAttribute="trailing" id="6HI-xN-eQC"/>
+                                    <constraint firstAttribute="bottom" secondItem="v4v-Qo-cGy" secondAttribute="bottom" id="F74-Vv-IiP"/>
+                                    <constraint firstItem="v4v-Qo-cGy" firstAttribute="centerY" secondItem="cT4-J6-8dy" secondAttribute="centerY" id="HG6-p7-muc"/>
+                                    <constraint firstItem="v4v-Qo-cGy" firstAttribute="top" secondItem="cT4-J6-8dy" secondAttribute="top" id="NCQ-y3-3oj"/>
+                                    <constraint firstItem="v4v-Qo-cGy" firstAttribute="leading" secondItem="cT4-J6-8dy" secondAttribute="leading" id="XCg-6s-3pI"/>
+                                    <constraint firstItem="v4v-Qo-cGy" firstAttribute="centerX" secondItem="cT4-J6-8dy" secondAttribute="centerX" id="fYV-l0-QK9"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Gkc-m2-jeA"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemGray6Color"/>
                         <constraints>
-                            <constraint firstItem="cT4-J6-8dy" firstAttribute="top" secondItem="Gkc-m2-jeA" secondAttribute="top" id="U2v-bG-AbC"/>
-                            <constraint firstItem="cT4-J6-8dy" firstAttribute="leading" secondItem="Gkc-m2-jeA" secondAttribute="leading" id="VJ8-3z-GOS"/>
-                            <constraint firstItem="cT4-J6-8dy" firstAttribute="trailing" secondItem="Gkc-m2-jeA" secondAttribute="trailing" id="l8b-KP-Kka"/>
-                            <constraint firstItem="cT4-J6-8dy" firstAttribute="bottom" secondItem="Gkc-m2-jeA" secondAttribute="bottom" id="o3N-4A-czx"/>
+                            <constraint firstItem="cT4-J6-8dy" firstAttribute="top" secondItem="Gkc-m2-jeA" secondAttribute="top" id="fGi-2b-s9R"/>
+                            <constraint firstAttribute="bottom" secondItem="cT4-J6-8dy" secondAttribute="bottom" id="jiR-cp-8Z3"/>
+                            <constraint firstItem="cT4-J6-8dy" firstAttribute="trailing" secondItem="Gkc-m2-jeA" secondAttribute="trailing" id="kAR-lm-Umj"/>
+                            <constraint firstItem="cT4-J6-8dy" firstAttribute="leading" secondItem="Gkc-m2-jeA" secondAttribute="leading" id="t1L-Yw-bjD"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="gHy-az-AYK">
