--- a/messenger/View/MessageFromUserCell.xib
+++ b/messenger/View/MessageFromUserCell.xib
@@ -21,27 +21,27 @@
                         <rect key="frame" x="60" y="10" width="300" height="60"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="исходящее сообщение" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i5P-Gz-h5V">
-                                <rect key="frame" x="8" y="8" width="207" height="44"/>
+                                <rect key="frame" x="8" y="8" width="212" height="44"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="symbol" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LId-0P-dJf">
-                                <rect key="frame" x="285" y="45" width="15" height="15"/>
+                                <rect key="frame" x="285" y="48" width="15" height="12"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="15" id="bhh-uY-3sC"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <color key="textColor" systemColor="systemGrayColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2022-03-07 21:26:41" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hHn-E3-Ukw">
-                                <rect key="frame" x="215" y="30" width="70" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2022-03-07 21:26:41" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hHn-E3-Ukw">
+                                <rect key="frame" x="220" y="30" width="65" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="70" id="Pa8-Oi-flj"/>
+                                    <constraint firstAttribute="width" constant="65" id="Pa8-Oi-flj"/>
                                     <constraint firstAttribute="height" constant="30" id="WlB-VX-Xsg"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <color key="textColor" systemColor="systemGrayColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
