--- a/messenger/View/MessageFromUserCell.xib
+++ b/messenger/View/MessageFromUserCell.xib
@@ -21,32 +21,32 @@
                         <rect key="frame" x="60" y="10" width="300" height="60"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="исходящее сообщение" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i5P-Gz-h5V">
-                                <rect key="frame" x="8" y="8" width="212" height="44"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <rect key="frame" x="8" y="8" width="202" height="44"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="symbol" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LId-0P-dJf">
-                                <rect key="frame" x="285" y="48" width="15" height="12"/>
+                                <rect key="frame" x="285" y="45.5" width="15" height="14.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="15" id="bhh-uY-3sC"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" systemColor="systemGrayColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2022-03-07 21:26:41" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hHn-E3-Ukw">
-                                <rect key="frame" x="220" y="30" width="65" height="30"/>
+                                <rect key="frame" x="210" y="30" width="75" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="65" id="Pa8-Oi-flj"/>
+                                    <constraint firstAttribute="width" constant="75" id="Pa8-Oi-flj"/>
                                     <constraint firstAttribute="height" constant="30" id="WlB-VX-Xsg"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" systemColor="systemGrayColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.78679430651207449" green="0.93092311748477474" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="LId-0P-dJf" secondAttribute="trailing" id="3eI-oZ-Dnq"/>
                             <constraint firstItem="LId-0P-dJf" firstAttribute="leading" secondItem="hHn-E3-Ukw" secondAttribute="trailing" id="B0H-Je-YNq"/>
@@ -82,9 +82,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
